--- a/index.html
+++ b/index.html
@@ -280,7 +280,7 @@
     .onboarding-info {
       display: flex;
       justify-content: center;
-      margin-bottom: 16px;
+      margin-top: 24px;
     }
 
     .info-badge {
@@ -294,6 +294,20 @@
       border-radius: 100px;
       font-size: 0.85rem;
       font-weight: 500;
+    }
+
+    .info-badge-small {
+      display: inline-flex;
+      align-items: center;
+      gap: 6px;
+      background: rgba(0, 255, 178, 0.08);
+      border: 1px solid rgba(0, 255, 178, 0.2);
+      color: var(--mint);
+      padding: 6px 14px;
+      border-radius: 50px;
+      font-size: 0.75rem;
+      font-weight: 500;
+      opacity: 0.7;
     }
 
     .onboarding-description {
@@ -2045,14 +2059,6 @@
         <div class="onboarding-icon">🏃‍♂️</div>
         <h1 class="onboarding-title">Your Year in Motion</h1>
         <p class="onboarding-subtitle">Get your personalized 2025 fitness recap in 2 minutes</p>
-        <div class="onboarding-info">
-          <div class="info-badge">
-            <svg viewBox="0 0 24 24" fill="currentColor" width="16" height="16">
-              <path d="M12 1L3 5v6c0 5.55 3.84 10.74 9 12 5.16-1.26 9-6.45 9-12V5l-9-4zm0 10.99h7c-.53 4.12-3.28 7.79-7 8.94V12H5V6.3l7-3.11v8.8z"/>
-            </svg>
-            <span>100% Private</span>
-          </div>
-        </div>
         <p class="onboarding-description">
           This app runs entirely in your browser. You'll connect your own Strava API access — your data never touches our servers.
         </p>
@@ -2062,6 +2068,14 @@
             <path d="M12 4l-1.41 1.41L16.17 11H4v2h12.17l-5.58 5.59L12 20l8-8z"/>
           </svg>
         </button>
+        <div class="onboarding-info">
+          <div class="info-badge-small">
+            <svg viewBox="0 0 24 24" fill="currentColor" width="14" height="14">
+              <path d="M12 1L3 5v6c0 5.55 3.84 10.74 9 12 5.16-1.26 9-6.45 9-12V5l-9-4zm0 10.99h7c-.53 4.12-3.28 7.79-7 8.94V12H5V6.3l7-3.11v8.8z"/>
+            </svg>
+            <span>100% Private</span>
+          </div>
+        </div>
       </div>
     </div>
 
