--- a/index.html
+++ b/index.html
@@ -118,18 +118,6 @@
       height: 24px;
     }
 
-    .demo-link {
-      margin-top: 24px;
-      font-size: 0.85rem;
-      opacity: 0.5;
-      cursor: pointer;
-      transition: opacity 0.2s;
-    }
-
-    .demo-link:hover {
-      opacity: 0.8;
-    }
-
     /* Settings Button on Login Screen */
     .settings-btn {
       position: absolute;
@@ -180,7 +168,7 @@
       position: absolute;
       inset: 0;
       background: radial-gradient(ellipse 80% 50% at 50% 0%, rgba(255, 77, 0, 0.15) 0%, transparent 60%),
-                  radial-gradient(ellipse 60% 40% at 80% 100%, rgba(139, 92, 246, 0.1) 0%, transparent 50%);
+        radial-gradient(ellipse 60% 40% at 80% 100%, rgba(139, 92, 246, 0.1) 0%, transparent 50%);
       pointer-events: none;
     }
 
@@ -252,8 +240,15 @@
     }
 
     @keyframes float {
-      0%, 100% { transform: translateY(0); }
-      50% { transform: translateY(-10px); }
+
+      0%,
+      100% {
+        transform: translateY(0);
+      }
+
+      50% {
+        transform: translateY(-10px);
+      }
     }
 
     .onboarding-title {
@@ -280,20 +275,7 @@
     .onboarding-info {
       display: flex;
       justify-content: center;
-      margin-top: 24px;
-    }
-
-    .info-badge {
-      display: inline-flex;
-      align-items: center;
-      gap: 6px;
-      background: rgba(0, 255, 178, 0.1);
-      border: 1px solid rgba(0, 255, 178, 0.2);
-      color: var(--mint);
-      padding: 6px 12px;
-      border-radius: 100px;
-      font-size: 0.85rem;
-      font-weight: 500;
+      margin-top: 48px;
     }
 
     .info-badge-small {
@@ -303,9 +285,9 @@
       background: rgba(0, 255, 178, 0.08);
       border: 1px solid rgba(0, 255, 178, 0.2);
       color: var(--mint);
-      padding: 6px 14px;
+      padding: 6px 10px;
       border-radius: 50px;
-      font-size: 0.75rem;
+      font-size: 0.5rem;
       font-weight: 500;
       opacity: 0.7;
     }
@@ -592,7 +574,9 @@
     }
 
     @keyframes stroke {
-      100% { stroke-dashoffset: 0; }
+      100% {
+        stroke-dashoffset: 0;
+      }
     }
 
     /* Settings Modal */
@@ -2036,7 +2020,8 @@
     </button>
     <button class="settings-btn" onclick="showSettings()" title="Settings">
       <svg viewBox="0 0 24 24" fill="currentColor" width="20" height="20">
-        <path d="M19.14 12.94c.04-.31.06-.63.06-.94 0-.31-.02-.63-.06-.94l2.03-1.58c.18-.14.23-.41.12-.61l-1.92-3.32c-.12-.22-.37-.29-.59-.22l-2.39.96c-.5-.38-1.03-.7-1.62-.94l-.36-2.54c-.04-.24-.24-.41-.48-.41h-3.84c-.24 0-.43.17-.47.41l-.36 2.54c-.59.24-1.13.57-1.62.94l-2.39-.96c-.22-.08-.47 0-.59.22L2.74 8.87c-.12.21-.08.47.12.61l2.03 1.58c-.04.31-.06.63-.06.94s.02.63.06.94l-2.03 1.58c-.18.14-.23.41-.12.61l1.92 3.32c.12.22.37.29.59.22l2.39-.96c.5.38 1.03.7 1.62.94l.36 2.54c.05.24.24.41.48.41h3.84c.24 0 .44-.17.47-.41l.36-2.54c.59-.24 1.13-.56 1.62-.94l2.39.96c.22.08.47 0 .59-.22l1.92-3.32c.12-.22.07-.47-.12-.61l-2.01-1.58zM12 15.6c-1.98 0-3.6-1.62-3.6-3.6s1.62-3.6 3.6-3.6 3.6 1.62 3.6 3.6-1.62 3.6-3.6 3.6z"/>
+        <path
+          d="M19.14 12.94c.04-.31.06-.63.06-.94 0-.31-.02-.63-.06-.94l2.03-1.58c.18-.14.23-.41.12-.61l-1.92-3.32c-.12-.22-.37-.29-.59-.22l-2.39.96c-.5-.38-1.03-.7-1.62-.94l-.36-2.54c-.04-.24-.24-.41-.48-.41h-3.84c-.24 0-.43.17-.47.41l-.36 2.54c-.59.24-1.13.57-1.62.94l-2.39-.96c-.22-.08-.47 0-.59.22L2.74 8.87c-.12.21-.08.47.12.61l2.03 1.58c-.04.31-.06.63-.06.94s.02.63.06.94l-2.03 1.58c-.18.14-.23.41-.12.61l1.92 3.32c.12.22.37.29.59.22l2.39-.96c.5.38 1.03.7 1.62.94l.36 2.54c.05.24.24.41.48.41h3.84c.24 0 .44-.17.47-.41l.36-2.54c.59-.24 1.13-.56 1.62-.94l2.39.96c.22.08.47 0 .59-.22l1.92-3.32c.12-.22.07-.47-.12-.61l-2.01-1.58zM12 15.6c-1.98 0-3.6-1.62-3.6-3.6s1.62-3.6 3.6-3.6 3.6 1.62 3.6 3.6-1.62 3.6-3.6 3.6z" />
       </svg>
     </button>
   </div>
@@ -2060,18 +2045,20 @@
         <h1 class="onboarding-title">Your Year in Motion</h1>
         <p class="onboarding-subtitle">Get your personalized 2025 fitness recap in 2 minutes</p>
         <p class="onboarding-description">
-          This app runs entirely in your browser. You'll connect your own Strava API access — your data never touches our servers.
+          This app runs entirely in your browser. You'll connect your own Strava API access — your data never touches
+          our servers.
         </p>
         <button class="onboarding-btn primary" onclick="nextOnboardingStep()">
           Let's Go
           <svg viewBox="0 0 24 24" fill="currentColor" width="20" height="20">
-            <path d="M12 4l-1.41 1.41L16.17 11H4v2h12.17l-5.58 5.59L12 20l8-8z"/>
+            <path d="M12 4l-1.41 1.41L16.17 11H4v2h12.17l-5.58 5.59L12 20l8-8z" />
           </svg>
         </button>
         <div class="onboarding-info">
           <div class="info-badge-small">
             <svg viewBox="0 0 24 24" fill="currentColor" width="14" height="14">
-              <path d="M12 1L3 5v6c0 5.55 3.84 10.74 9 12 5.16-1.26 9-6.45 9-12V5l-9-4zm0 10.99h7c-.53 4.12-3.28 7.79-7 8.94V12H5V6.3l7-3.11v8.8z"/>
+              <path
+                d="M12 1L3 5v6c0 5.55 3.84 10.74 9 12 5.16-1.26 9-6.45 9-12V5l-9-4zm0 10.99h7c-.53 4.12-3.28 7.79-7 8.94V12H5V6.3l7-3.11v8.8z" />
             </svg>
             <span>100% Private</span>
           </div>
@@ -2084,7 +2071,7 @@
       <div class="onboarding-content">
         <button class="back-btn" onclick="prevOnboardingStep()">
           <svg viewBox="0 0 24 24" fill="currentColor" width="20" height="20">
-            <path d="M20 11H7.83l5.59-5.59L12 4l-8 8 8 8 1.41-1.41L7.83 13H20v-2z"/>
+            <path d="M20 11H7.83l5.59-5.59L12 4l-8 8 8 8 1.41-1.41L7.83 13H20v-2z" />
           </svg>
           Back
         </button>
@@ -2100,7 +2087,8 @@
               <a href="https://www.strava.com/settings/api" target="_blank" rel="noopener" class="external-link">
                 strava.com/settings/api
                 <svg viewBox="0 0 24 24" fill="currentColor" width="14" height="14">
-                  <path d="M19 19H5V5h7V3H5c-1.11 0-2 .9-2 2v14c0 1.1.89 2 2 2h14c1.1 0 2-.9 2-2v-7h-2v7zM14 3v2h3.59l-9.83 9.83 1.41 1.41L19 6.41V10h2V3h-7z"/>
+                  <path
+                    d="M19 19H5V5h7V3H5c-1.11 0-2 .9-2 2v14c0 1.1.89 2 2 2h14c1.1 0 2-.9 2-2v-7h-2v7zM14 3v2h3.59l-9.83 9.83 1.41 1.41L19 6.41V10h2V3h-7z" />
                 </svg>
               </a>
             </div>
@@ -2140,7 +2128,7 @@
         <button class="onboarding-btn primary" onclick="nextOnboardingStep()">
           I've Created My App
           <svg viewBox="0 0 24 24" fill="currentColor" width="20" height="20">
-            <path d="M12 4l-1.41 1.41L16.17 11H4v2h12.17l-5.58 5.59L12 20l8-8z"/>
+            <path d="M12 4l-1.41 1.41L16.17 11H4v2h12.17l-5.58 5.59L12 20l8-8z" />
           </svg>
         </button>
       </div>
@@ -2151,7 +2139,7 @@
       <div class="onboarding-content">
         <button class="back-btn" onclick="prevOnboardingStep()">
           <svg viewBox="0 0 24 24" fill="currentColor" width="20" height="20">
-            <path d="M20 11H7.83l5.59-5.59L12 4l-8 8 8 8 1.41-1.41L7.83 13H20v-2z"/>
+            <path d="M20 11H7.83l5.59-5.59L12 4l-8 8 8 8 1.41-1.41L7.83 13H20v-2z" />
           </svg>
           Back
         </button>
@@ -2171,7 +2159,7 @@
             <span class="input-hint">The long alphanumeric string</span>
             <div class="validation-feedback hidden" id="secretFeedback">
               <svg viewBox="0 0 24 24" fill="currentColor" width="14" height="14">
-                <path d="M9 16.17L4.83 12l-1.42 1.41L9 19 21 7l-1.41-1.41z"/>
+                <path d="M9 16.17L4.83 12l-1.42 1.41L9 19 21 7l-1.41-1.41z" />
               </svg>
               Looks good!
             </div>
@@ -2180,7 +2168,8 @@
 
         <div class="privacy-note">
           <svg viewBox="0 0 24 24" fill="currentColor" width="16" height="16">
-            <path d="M18 8h-1V6c0-2.76-2.24-5-5-5S7 3.24 7 6v2H6c-1.1 0-2 .9-2 2v10c0 1.1.9 2 2 2h12c1.1 0 2-.9 2-2V10c0-1.1-.9-2-2-2zm-6 9c-1.1 0-2-.9-2-2s.9-2 2-2 2 .9 2 2-.9 2-2 2zm3.1-9H8.9V6c0-1.71 1.39-3.1 3.1-3.1 1.71 0 3.1 1.39 3.1 3.1v2z"/>
+            <path
+              d="M18 8h-1V6c0-2.76-2.24-5-5-5S7 3.24 7 6v2H6c-1.1 0-2 .9-2 2v10c0 1.1.9 2 2 2h12c1.1 0 2-.9 2-2V10c0-1.1-.9-2-2-2zm-6 9c-1.1 0-2-.9-2-2s.9-2 2-2 2 .9 2 2-.9 2-2 2zm3.1-9H8.9V6c0-1.71 1.39-3.1 3.1-3.1 1.71 0 3.1 1.39 3.1 3.1v2z" />
           </svg>
           <span>Your credentials are stored only in your browser and never sent to our servers</span>
         </div>
@@ -2188,7 +2177,7 @@
         <button class="onboarding-btn primary" id="saveCredentialsBtn" onclick="saveCredentials()" disabled>
           Save & Connect
           <svg viewBox="0 0 24 24" fill="currentColor" width="20" height="20">
-            <path d="M12 4l-1.41 1.41L16.17 11H4v2h12.17l-5.58 5.59L12 20l8-8z"/>
+            <path d="M12 4l-1.41 1.41L16.17 11H4v2h12.17l-5.58 5.59L12 20l8-8z" />
           </svg>
         </button>
       </div>
@@ -2199,8 +2188,8 @@
       <div class="onboarding-content success-content">
         <div class="success-checkmark">
           <svg viewBox="0 0 52 52">
-            <circle class="checkmark-circle" cx="26" cy="26" r="25" fill="none"/>
-            <path class="checkmark-check" fill="none" d="M14.1 27.2l7.1 7.2 16.7-16.8"/>
+            <circle class="checkmark-circle" cx="26" cy="26" r="25" fill="none" />
+            <path class="checkmark-check" fill="none" d="M14.1 27.2l7.1 7.2 16.7-16.8" />
           </svg>
         </div>
         <h1 class="onboarding-title">You're All Set!</h1>
@@ -2217,7 +2206,8 @@
         <h2>Settings</h2>
         <button class="close-btn" onclick="hideSettings()">
           <svg viewBox="0 0 24 24" fill="currentColor" width="24" height="24">
-            <path d="M19 6.41L17.59 5 12 10.59 6.41 5 5 6.41 10.59 12 5 17.59 6.41 19 12 13.41 17.59 19 19 17.59 13.41 12z"/>
+            <path
+              d="M19 6.41L17.59 5 12 10.59 6.41 5 5 6.41 10.59 12 5 17.59 6.41 19 12 13.41 17.59 19 19 17.59 13.41 12z" />
           </svg>
         </button>
       </div>
@@ -2230,7 +2220,8 @@
           </div>
           <button class="settings-action-btn" onclick="resetCredentials()">
             <svg viewBox="0 0 24 24" fill="currentColor" width="18" height="18">
-              <path d="M17.65 6.35C16.2 4.9 14.21 4 12 4c-4.42 0-7.99 3.58-7.99 8s3.57 8 7.99 8c3.73 0 6.84-2.55 7.73-6h-2.08c-.82 2.33-3.04 4-5.65 4-3.31 0-6-2.69-6-6s2.69-6 6-6c1.66 0 3.14.69 4.22 1.78L13 11h7V4l-2.35 2.35z"/>
+              <path
+                d="M17.65 6.35C16.2 4.9 14.21 4 12 4c-4.42 0-7.99 3.58-7.99 8s3.57 8 7.99 8c3.73 0 6.84-2.55 7.73-6h-2.08c-.82 2.33-3.04 4-5.65 4-3.31 0-6-2.69-6-6s2.69-6 6-6c1.66 0 3.14.69 4.22 1.78L13 11h7V4l-2.35 2.35z" />
             </svg>
             Reset Credentials
           </button>
@@ -2239,7 +2230,8 @@
           <h3>Session</h3>
           <button class="settings-action-btn danger" onclick="clearSession()">
             <svg viewBox="0 0 24 24" fill="currentColor" width="18" height="18">
-              <path d="M17 7l-1.41 1.41L18.17 11H8v2h10.17l-2.58 2.58L17 17l5-5zM4 5h8V3H4c-1.1 0-2 .9-2 2v14c0 1.1.9 2 2 2h8v-2H4V5z"/>
+              <path
+                d="M17 7l-1.41 1.41L18.17 11H8v2h10.17l-2.58 2.58L17 17l5-5zM4 5h8V3H4c-1.1 0-2 .9-2 2v14c0 1.1.9 2 2 2h8v-2H4V5z" />
             </svg>
             Log Out & Clear Data
           </button>
