--- a/index.html
+++ b/index.html
@@ -332,8 +332,9 @@
 
     .back-btn {
       position: absolute;
-      top: 0;
-      left: 0;
+      top: 24px;
+      left: 24px;
+      z-index: 20;
       display: flex;
       align-items: center;
       gap: 4px;
@@ -353,11 +354,17 @@
     }
 
     .step-indicator {
+      position: absolute;
+      top: 24px;
+      left: 0;
+      right: 0;
+      text-align: center;
       font-size: 0.75rem;
       text-transform: uppercase;
       letter-spacing: 0.1em;
       opacity: 0.4;
-      margin-bottom: 8px;
+      margin-bottom: 0;
+      pointer-events: none;
     }
 
     /* Instructions Card */
@@ -2068,14 +2075,14 @@
 
     <!-- Step 2: Create Strava App -->
     <div class="onboarding-step" id="onboardingStep2">
+      <button class="back-btn" onclick="prevOnboardingStep()">
+        <svg viewBox="0 0 24 24" fill="currentColor" width="20" height="20">
+          <path d="M20 11H7.83l5.59-5.59L12 4l-8 8 8 8 1.41-1.41L7.83 13H20v-2z" />
+        </svg>
+        Back
+      </button>
+      <div class="step-indicator">Step 1 of 2</div>
       <div class="onboarding-content">
-        <button class="back-btn" onclick="prevOnboardingStep()">
-          <svg viewBox="0 0 24 24" fill="currentColor" width="20" height="20">
-            <path d="M20 11H7.83l5.59-5.59L12 4l-8 8 8 8 1.41-1.41L7.83 13H20v-2z" />
-          </svg>
-          Back
-        </button>
-        <div class="step-indicator">Step 1 of 2</div>
         <h1 class="onboarding-title">Create a Strava API App</h1>
         <p class="onboarding-subtitle">This takes about 60 seconds</p>
 
@@ -2136,14 +2143,14 @@
 
     <!-- Step 3: Enter Credentials -->
     <div class="onboarding-step" id="onboardingStep3">
+      <button class="back-btn" onclick="prevOnboardingStep()">
+        <svg viewBox="0 0 24 24" fill="currentColor" width="20" height="20">
+          <path d="M20 11H7.83l5.59-5.59L12 4l-8 8 8 8 1.41-1.41L7.83 13H20v-2z" />
+        </svg>
+        Back
+      </button>
+      <div class="step-indicator">Step 2 of 2</div>
       <div class="onboarding-content">
-        <button class="back-btn" onclick="prevOnboardingStep()">
-          <svg viewBox="0 0 24 24" fill="currentColor" width="20" height="20">
-            <path d="M20 11H7.83l5.59-5.59L12 4l-8 8 8 8 1.41-1.41L7.83 13H20v-2z" />
-          </svg>
-          Back
-        </button>
-        <div class="step-indicator">Step 2 of 2</div>
         <h1 class="onboarding-title">Copy Your Credentials</h1>
         <p class="onboarding-subtitle">Find these on your Strava API page after creating the app</p>
 
