--- a/index.html
+++ b/index.html
@@ -205,9 +205,9 @@
       inset: 0;
       display: flex;
       flex-direction: column;
-      justify-content: center;
+      justify-content: flex-start;
       align-items: center;
-      padding: 60px 24px 24px;
+      padding: 150px 24px 40px;
       opacity: 0;
       visibility: hidden;
       transform: translateX(30px);
