fix iOS safezones

--- a/index.html
+++ b/index.html
@@ -54,10 +54,7 @@
       flex-direction: column;
       justify-content: center;
       align-items: center;
-      padding: calc(40px + env(safe-area-inset-top, 0))
-               max(40px, env(safe-area-inset-right, 40px))
-               calc(40px + env(safe-area-inset-bottom, 0))
-               max(40px, env(safe-area-inset-left, 40px));
+      padding: calc(40px + env(safe-area-inset-top, 0)) max(40px, env(safe-area-inset-right, 40px)) calc(40px + env(safe-area-inset-bottom, 0)) max(40px, env(safe-area-inset-left, 40px));
       background: var(--night);
       transition: opacity 0.5s ease, visibility 0.5s ease;
     }
@@ -204,7 +201,7 @@
       position: absolute;
       inset: 0;
       background: radial-gradient(ellipse 80% 50% at 50% 0%, rgba(255, 77, 0, 0.15) 0%, transparent 60%),
-                  radial-gradient(ellipse 60% 40% at 80% 100%, rgba(139, 92, 246, 0.1) 0%, transparent 50%);
+        radial-gradient(ellipse 60% 40% at 80% 100%, rgba(139, 92, 246, 0.1) 0%, transparent 50%);
     }
 
     .onboarding-progress {
@@ -843,10 +840,7 @@
       flex-direction: column;
       justify-content: center;
       align-items: center;
-      padding: calc(40px + env(safe-area-inset-top, 0))
-               max(40px, env(safe-area-inset-right, 40px))
-               calc(40px + env(safe-area-inset-bottom, 0))
-               max(40px, env(safe-area-inset-left, 40px));
+      padding: calc(40px + env(safe-area-inset-top, 0)) max(40px, env(safe-area-inset-right, 40px)) calc(40px + env(safe-area-inset-bottom, 0)) max(40px, env(safe-area-inset-left, 40px));
       background: var(--night);
       transition: opacity 0.5s ease, visibility 0.5s ease;
     }
@@ -943,10 +937,7 @@
       flex-direction: column;
       justify-content: center;
       align-items: center;
-      padding: calc(40px + env(safe-area-inset-top, 0))
-               max(40px, env(safe-area-inset-right, 40px))
-               calc(40px + env(safe-area-inset-bottom, 0))
-               max(40px, env(safe-area-inset-left, 40px));
+      padding: calc(40px + env(safe-area-inset-top, 0)) max(40px, env(safe-area-inset-right, 40px)) calc(40px + env(safe-area-inset-bottom, 0)) max(40px, env(safe-area-inset-left, 40px));
       background: var(--night);
       transition: opacity 0.5s ease, visibility 0.5s ease;
       text-align: center;
@@ -1137,10 +1128,7 @@
       flex-direction: column;
       justify-content: center;
       align-items: center;
-      padding: calc(40px + env(safe-area-inset-top, 0))
-               calc(24px + env(safe-area-inset-right, 0))
-               calc(40px + env(safe-area-inset-bottom, 0))
-               calc(24px + env(safe-area-inset-left, 0));
+      padding: calc(40px + env(safe-area-inset-top, 0)) calc(24px + env(safe-area-inset-right, 0)) calc(40px + env(safe-area-inset-bottom, 0)) calc(24px + env(safe-area-inset-left, 0));
       position: relative;
     }
 
